--- a/discordClone.html
+++ b/discordClone.html
@@ -26,23 +26,20 @@
     </div>
 
     <div class="main">
-        <div class="side-bar2">
+        <div class="side-bars">
             <input type="text" placeholder="Find or start conversation">
             <a href="#"><button><i class="fa fa-users"></i>Friend</button></a>
             <a href="#"><button> <i class="fa fa-rebel"></i>Nitro</button></a>
             <a href="#"> <button class="listNama">DIRECT MESSAGES<span style="float: right;"><i class="fa fa-plus fa-2xs"></i></span> </button></a>
-            <a href="#"> <button class="listNama">Vino <span style="float: right;"><i class="fa fa-times"></i></span> </button></a>
-            <a href="#"> <button class="listNama">Erdi <span style="float: right;"><i class="fa fa-times"></i></span> </button></a>
-            <a href="#"> <button class="listNama">Adol <span style="float: right;"><i class="fa fa-times"></i></span> </button></a>
-            <a href="#"> <button class="listNama">Vino <span style="float: right;"><i class="fa fa-times"></i></span> </button></a>
-            <a href="#"> <button class="listNama">Erdi <span style="float: right;"><i class="fa fa-times"></i></span> </button></a>
-            <a href="#"> <button class="listNama">Adol <span style="float: right;"><i class="fa fa-times"></i></span> </button></a>
-            <a href="#"> <button class="listNama">Vino <span style="float: right;"><i class="fa fa-times"></i></span> </button></a>
-            <a href="#"> <button class="listNama">Erdi <span style="float: right;"><i class="fa fa-times"></i></span> </button></a>
-            <a href="#"> <button class="listNama">Adol <span style="float: right;"><i class="fa fa-times"></i></span> </button></a>
-            <a href="#"> <button class="listNama">Vino <span style="float: right;"><i class="fa fa-times"></i></span> </button></a>
-            <a href="#"> <button class="listNama">Erdi <span style="float: right;"><i class="fa fa-times"></i></span> </button></a>
-            <a href="#"> <button class="listNama">Adol <span style="float: right;"><i class="fa fa-times"></i></span> </button></a>
+            <div class="user">
+                <a href="#"> <button class="listNama"> <img src="img/img2.png" width="80" height="80"> <span class="nama"> Vino</span> <span class="close" ><i class="fa fa-times"></i></span> </button></a>
+            </div>
+            <div class="user">
+                <a href="#"> <button class="listNama"> <img src="img/nitro.png" width="80" height="80"> <span class="nama"> Erdi</span> <span class="close" ><i class="fa fa-times"></i></span> </button></a>
+            </div>
+            <div class="user">
+                <a href="#"> <button class="listNama"> <img src="img/img1.jfif" width="80" height="80"> <span class="nama"> Thomas</span> <span class="close" ><i class="fa fa-times"></i></span> </button></a>
+            </div>
         </div>
 
         <div class="top-nav">
@@ -85,6 +82,6 @@
             </div>
         </div>
     </div>
-
+    <script src="script.js"></script>
 </body>
 </html>
