--- a/discordClone.html
+++ b/discordClone.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
@@ -30,7 +30,7 @@
             <input type="text" placeholder="Find or start conversation">
             <a href="#"><button><i class="fa fa-users"></i>Friend</button></a>
             <a href="#"><button> <i class="fa fa-rebel"></i>Nitro</button></a>
-            <a href="#"> <button class="listNama">DIRECT MESSAGES<span style="float: right;"><i class="fa fa-plus fa-2xs"></i></span> </button></a>
+            <a href="#"> <button class="listNama"><span>DIRECT MESSAGES</span><span class ="add"><i class="fa fa-plus fa-2xs"></i></span> </button></a>
             <div class="user">
                 <a href="#"> <button class="listNama"> <img src="img/img2.png" width="80" height="80"> <span class="nama"> Vino</span> <span class="close" ><i class="fa fa-times"></i></span> </button></a>
             </div>
@@ -46,7 +46,7 @@
             <div class="content">
               <i class="fa fa-users">Friends</i> 
               <a href="#"> <button>Online</button></a>
-              <!-- <button><a href="#"></a>Online</button> -->
+              <button><a href="#"></a>Online</button>
               <a href="#"> <button>All</button></a>
               <a href="#"> <button>Pending</button></a>
               <a href="#"> <button>Blocked</button></a>
@@ -77,8 +77,9 @@
             </div>
             <div class="bagian-4">
                 <h2>Active Now</h2>
-                <h3>It's quiet for now...</h3>
-                <h4>When a friend starts an activity-like playing a game or hanging out on voice-we'll show it here !</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam unde modi perspiciatis ullam, culpa repellat reiciendis dolores commodi itaque saepe. Perferendis eligendi iure inventore possimus! Eligendi quia sapiente dolorum sint.</p>
+                <!-- <h3>It's quiet for now...</h3>
+                <h4>When a friend starts an activity-like playing a game or hanging out on voice-we'll show it here !</h4> -->
             </div>
         </div>
     </div>
